# plainly

./: .editorconfig  .env.local  .env.production  .eslintrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  lint-staged.config.js  main.js  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.lib.json  tsconfig.server.json  vite.config.mjs  watch.js  watch.ts  wrangler.toml
.aiassistant/rules/: code.md
.github/workflows/: release.yml
config/: env.ts  paths.ts  server.config.json  webpack.config.lib.ts  webpack.config.ts  webpackDevServer.config.ts
config/jest/: cssTransform.ts  fileTransform.js  fileTransform.ts  jsTransform.js  jsTransform.ts
docs-src/: 2026-05-13-typescript-migration-audit.md  2026-05-13-typescript-migration-plan.md  2026-05-14-document-share-ssr-design.md  2026-05-14-document-share-ssr-task-checklist.md
public/: index.html  manifest.json
scripts/: build.ts  copy-jieba-wasm.js  copy-jieba-wasm.ts  gen-cf-headers.mjs  gen-cf-headers.ts  gen-node-headers.mjs  gen-node-headers.ts  gen-worker-schema.mjs  gen-worker-schema.ts  publish-npm.ts  start.ts  test.ts
src/: App.css  App.jsx  App.test.tsx  App.tsx  Lib.jsx  Lib.tsx  global-shim.js  index.d.ts  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: plainly.icns
src-tauri/src/: main.rs
src/icon/: Close.jsx  Close.tsx  Copy.jsx  Copy.tsx  Down.jsx  Down.tsx  Environment.jsx  (+30 more)
stories/: allImageHosting.js  online.js
worker/: api.js  api.ts  index.js  index.ts  schema.generated.js  sharePbkdf2PoC.ts  shareSanitizePoC.ts
(+193 files in other folders)
